# arcgis

./: .env.example  .gitignore  API_KEY_TESTING_STRATEGY.md  ARCGIS_REST_API_RESEARCH.md  ARCHITECTURE_DECISION.md  ASYNC_ELEVATION_PLAN.md  AUTHENTICATION_STRATEGY.md  CHANGELOG-0.1.2.md  CHANGELOG-0.1.3.md  CHANGELOG.md  CLAUDE.md  CLAUDE_COMPLIANCE_REVIEW.md  CLAUDE_MD_COMPLIANCE.md  CONTRIBUTING.md  COVERAGE_ROADMAP.md  Cargo.toml  ESRI_GEOMETRY_INTEGRATION_PLAN.md  FULL_COVERAGE_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE-MIT  PERMISSIONS_RESEARCH.md  PKCE_AUTHENTICATION_STRATEGY.md  PLANNING_INDEX.md  PLANNING_ITEM_DATA_API.md  PROJECT_STATUS.md  README.md  RELEASE-0.1.3.md  RELEASE-GITHUB-0.1.3.md  SERVICE_DEFINITION_TYPING_PLAN.md  USER_EXPERIENCE_COMPARISON.md  build.rs  discovered_permissions.txt  example_runs.csv  justfile  run_all_examples.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
config/: test-tiers.toml
docs/: assertion_audit_2026-02-22.md  example_coverage_assessment.md  examples_expansion_plan.md  gap_analysis_2026-02-08.md  gap_analysis_testing_2026-02-14.md  multi-tier-testing.md
examples/: README.md  advanced_queries.rs  basic_client.rs  client_credentials_flow.rs  discover_permissions.rs  edit_session.rs  elevation_analysis.rs  elevation_async_analysis.rs  feature_attachments.rs  feature_service_batch_editing.rs  feature_service_field_calculations.rs  feature_service_metadata.rs  feature_service_truncate_safe.rs  geocode_addresses.rs  geocoding_batch_operations.rs  geometry_advanced.rs  geometry_operations.rs  geoprocessing_execution_modes.rs  geoprocessing_job_monitoring.rs  geoprocessing_tools.rs  image_service_identify_advanced.rs  image_service_raster.rs  map_service_basics.rs  portal_content_management.rs  portal_group_membership.rs  portal_group_workflow.rs  portal_item_data_files.rs  portal_item_data_text.rs  portal_item_lifecycle.rs  portal_publishing.rs  portal_service_management.rs  query_features.rs  routing_navigation.rs  spatial_query.rs  vector_tiles.rs  version_management_basics.rs
examples/enterprise/: README.md  advanced_queries.rs  basic_client.rs  branch_versioning_workflow.rs  edit_session.rs  elevation_analysis.rs  elevation_async_analysis.rs  feature_attachments.rs  feature_service_field_calculations.rs  feature_service_metadata.rs  geocode_addresses.rs  geocoding_batch_operations.rs  geometry_advanced.rs  geometry_operations.rs  geoprocessing_job_monitoring.rs  geoprocessing_tools.rs  image_service_identify_advanced.rs  image_service_raster.rs  places_poi_search.rs  portal_content_management.rs  portal_item_lifecycle.rs  portal_publishing.rs  routing_navigation.rs
examples/public/: README.md  map_service_basics.rs  spatial_query.rs  vector_tiles.rs
src/: client.rs  config.rs  error.rs  example_tracker.rs  lib.rs
src/auth/: api_key.rs  client_credentials.rs  mod.rs  no_auth.rs  oauth.rs  permissions.rs  provider.rs
src/geo/: errors.rs  mod.rs
src/geo/esri/: geometry.rs  mod.rs  spatial_ref.rs
src/geometry/: arcgis.rs  convert.rs  errors.rs  mod.rs  new_types.rs  projected.rs  spatial_ref.rs  types.rs
src/services/: mod.rs
src/services/elevation/: client.rs  mod.rs  types.rs
src/services/feature/: attachment.rs  client.rs  edit.rs  geojson.rs  mod.rs  query.rs  types.rs
src/services/feature/client/: admin.rs  attachment.rs  definition.rs  edit.rs  mod.rs  query.rs
src/services/feature/pbf/: decoder.rs  esri_p_buffer.rs  geometry.rs  mod.rs
src/services/geocode/: client.rs  mod.rs  types.rs
src/services/geometry/: client.rs  mod.rs  types.rs
src/services/geoprocessing/: client.rs  mod.rs  parameters.rs  types.rs
src/services/image/: client.rs  mod.rs  types.rs
src/services/map/: client.rs  enums.rs  export.rs  mod.rs  types.rs
src/services/places/: client.rs  mod.rs  types.rs
src/services/portal/: client.rs  mod.rs  service_definition.rs  types.rs
src/services/portal/client/: groups.rs  items.rs  mod.rs  publishing.rs  search.rs  sharing.rs  users.rs
src/services/routing/: client.rs  mod.rs  types.rs
src/services/vector_tile/: client.rs  mod.rs  types.rs
src/services/version_management/: client.rs  mod.rs  types.rs
src/services/version_management/client/: conflicts.rs  mod.rs  reconciliation.rs  sessions.rs  utilities.rs  versions.rs
src/types/: geometry.rs  ids.rs  mod.rs
src/util/: mod.rs
tests/: README.md  auth_test.rs  feature_attachments_test.rs  feature_related_records_test.rs  feature_statistics_test.rs  feature_top_features_test.rs  integration_basic.rs  portal_service_definition_integration_test.rs  public_feature_query_test.rs  service_definition_phase3_test.rs  service_definition_relationships_test.rs  service_definition_retrieval_test.rs  service_definition_table_test.rs  service_definition_test.rs  service_definition_validation_test.rs  services_feature_test.rs  services_map_test.rs  types_geometry_test.rs  types_ids_test.rs
tests/common/: mod.rs
