[package]
name = "arcgis"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["ArcGIS Rust Contributors"]
license = "MIT OR Apache-2.0"
description = "Type-safe Rust SDK for the ArcGIS REST API with compile-time guarantees"
repository = "https://github.com/crumplecup/arcgis"
documentation = "https://docs.rs/arcgis"
homepage = "https://github.com/crumplecup/arcgis"
keywords = ["arcgis", "gis", "geospatial", "esri", "maps"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
exclude = [".github/", "examples/", "benches/"]

[features]
# Testing features
api = [] # Empty marker for tests that hit live API endpoints


[dependencies]
# Core HTTP and async runtime
reqwest = { version = "0.13", features = [
  "json",
  "rustls",
  "multipart",
  "stream",
  "query",
  "form",
] }
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Authentication
oauth2 = "5"

# URL handling
url = "2.5"

# MIME type detection for attachments
mime_guess = "2.0"

# Error handling
derive_more = { version = "2.0", features = ["display", "error", "from"] }

# Logging
tracing = "0.1"

# Spatial types (GeoRust ecosystem - always included)
geo-types = "0.7"
geojson = { version = "0.24", features = ["geo-types"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Derive macros for getters/setters
derive-getters = "0.5"
derive_setters = "0.1"
derive-new = "0.7"
derive_builder = "0.20"

# UUID generation for session IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Protocol Buffers (for PBF format support)
prost = "0.14"
bytes = "1.5"

# Optional dependencies (enabled by features)
geo = { version = "0.32", optional = true, features = ["use-serde"] }
geozero = { version = "0.15", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
mockito = "1"
tracing-subscriber = "0.3"
anyhow = "1"
dotenvy = "0.15"

[build-dependencies]
prost-build = "0.14"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
