[package]
name = "arcgis"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["ArcGIS Rust Contributors"]
license = "MIT OR Apache-2.0"
description = "Type-safe Rust SDK for the ArcGIS REST API with compile-time guarantees"
repository = "https://github.com/crumplecup/arcgis"
documentation = "https://docs.rs/arcgis"
homepage = "https://github.com/crumplecup/arcgis"
keywords = ["arcgis", "gis", "geospatial", "esri", "maps"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
exclude = [".github/", "benches/"]

[features]
# Testing features (organized by API key privilege classes)
test-public = [
] # Tier 1: Public tests using free ArcGIS services (no authentication)
test-location = [
] # Tier 2: Location Services + Spatial Analysis (requires ARCGIS_LOCATION_KEY)
test-content = [
] # Tier 3: Content + Sharing + Groups - content management (requires ARCGIS_CONTENT_KEY, manual only)
test-features = [
] # Tier 3: Features - editing privileges (requires ARCGIS_FEATURES_KEY, manual only)

[dependencies]
# Core HTTP and async runtime
reqwest = { version = "0.13", features = [
  "json",
  "rustls",
  "multipart",
  "stream",
  "query",
  "form",
] }
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Authentication
oauth2 = "5"

# URL handling
url = "2.5"

# MIME type detection for attachments
mime_guess = "2.0"

# Error handling
derive_more = { version = "2.0", features = ["display", "error", "from"] }

# Logging
tracing = "0.1"

# Spatial types (GeoRust ecosystem - always included)
geo-types = "0.7"
geojson = { version = "0.24", features = ["geo-types"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }

# Environment variable management
dotenvy = "0.15"

# Async traits
async-trait = "0.1"

# Derive macros for getters/setters
derive-getters = "0.5"
derive_setters = "0.1"
derive-new = "0.7"
derive_builder = "0.20"

# UUID generation for session IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Protocol Buffers (for PBF format support)
prost = "0.14"
bytes = "1.5"

# Optional dependencies (enabled by features)
geozero = { version = "0.15", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
mockito = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
config = "0.15"

[build-dependencies]
prost-build = "0.14"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Public examples (Tier 1 - no auth required)
[[example]]
name = "query_features"
path = "examples/public/query_features.rs"

[[example]]
name = "spatial_query"
path = "examples/public/spatial_query.rs"

[[example]]
name = "map_service_basics"
path = "examples/public/map_service_basics.rs"

[[example]]
name = "vector_tiles"
path = "examples/public/vector_tiles.rs"

# Enterprise examples - Authentication & Setup
[[example]]
name = "basic_client"
path = "examples/enterprise/basic_client.rs"

[[example]]
name = "client_credentials_flow"
path = "examples/enterprise/client_credentials_flow.rs"

# Enterprise examples - Location Services (Tier 2)
[[example]]
name = "geocode_addresses"
path = "examples/enterprise/geocode_addresses.rs"

[[example]]
name = "routing_navigation"
path = "examples/enterprise/routing_navigation.rs"

[[example]]
name = "geometry_operations"
path = "examples/enterprise/geometry_operations.rs"

[[example]]
name = "geometry_advanced"
path = "examples/enterprise/geometry_advanced.rs"

# Enterprise examples - Portal Operations (Tier 3)
[[example]]
name = "feature_attachments"
path = "examples/enterprise/feature_attachments.rs"

[[example]]
name = "portal_content_management"
path = "examples/enterprise/portal_content_management.rs"

[[example]]
name = "image_service_raster"
path = "examples/enterprise/image_service_raster.rs"

[[example]]
name = "image_service_identify_advanced"
path = "examples/enterprise/image_service_identify_advanced.rs"

[[example]]
name = "geoprocessing_tools"
path = "examples/enterprise/geoprocessing_tools.rs"

[[example]]
name = "portal_publishing"
path = "examples/enterprise/portal_publishing.rs"

[[example]]
name = "portal_item_lifecycle"
path = "examples/enterprise/portal_item_lifecycle.rs"

[[example]]
name = "elevation_analysis"
path = "examples/enterprise/elevation_analysis.rs"

[[example]]
name = "elevation_async_analysis"
path = "examples/enterprise/elevation_async_analysis.rs"

[[example]]
name = "advanced_queries"
path = "examples/enterprise/advanced_queries.rs"

[[example]]
name = "feature_service_metadata"
path = "examples/enterprise/feature_service_metadata.rs"

[[example]]
name = "geocoding_batch_operations"
path = "examples/enterprise/geocoding_batch_operations.rs"
